--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
+.TTT-grid {
+  display: table;
+  border-top: 5px solid red;
+  border-bottom: 5px solid red;
+  height: 450px;
+  width: 450px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
 
+.row {
+  display: table-row;
+  border-top: 10px solid red;
+  border-bottom: 10px solid red;
+
+}
+
+.spot {
+  height: 45px;
+  border-top: 10px solid red;
+  border-bottom: 10px solid red;
+  border-left: 15px solid red;
+  border-right: 15px solid red;
+  display: table-cell;
+}
