--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 
 .spot {
   height: 45px;
+  width: 45px;
   border-top: 10px solid red;
   border-bottom: 10px solid red;
   border-left: 15px solid red;
